# taoki

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASE_NOTES.md
.claude-plugin/: plugin.json
.github/workflows/: release.yml
agents/: taoki-enrich.md
benches/: speed.rs  token_ratio.rs
benches/fixtures/: sample.go  sample.java  sample.js  sample.py  sample.rs  sample.ts
commands/: taoki-deps.md  taoki-index.md  taoki-map.md  taoki-radar.md  taoki-ripple.md  taoki-xray.md
doc/specs/: 2026-03-14-taoki-design.md
docs/: release-test-v1.1.0.md
docs/superpowers/plans/: 2026-03-14-taoki-implementation.md  2026-03-15-benchmarks-expressions.md  2026-03-15-hooks-adoption.md  2026-03-15-install-update-pipeline.md  2026-03-15-taoki-phase1-improvements.md  2026-03-16-body-insights.md  2026-03-16-code-map-skeleton-cache.md  2026-03-16-docstring-extraction.md  2026-03-17-v092-accuracy-workspace.md  2026-03-18-user-feedback-overhaul.md
docs/superpowers/specs/: 2026-03-15-benchmarks-expressions-design.md  2026-03-15-hooks-adoption-design.md  2026-03-15-install-update-design.md  (+8 more)
hooks/: check-agent.sh  check-enrichment.sh  check-glob.sh  check-grep.sh  check-read.sh  hooks.json
scripts/: benchmark.sh  install.ps1  install.sh  prerelease.sh  run.cmd  run.sh  taoki-gemini.md  uninstall.sh
skills/: taoki-index.md  taoki-map.md  taoki-workflow.md
src/: cache.rs  codemap.rs  deps.rs  lib.rs  main.rs  mcp.rs
src/index/: body.rs  mod.rs
src/mcp/: mod.rs  tools.rs
tools/: benchmark.rs  repos.json
validation/: run.sh
(+18 files in other folders)
