[package]
name = "taoki"
version = "1.3.1"
edition = "2021"

[dependencies]
blake3 = "1"
fs2 = "0.4"
globset = "0.4"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tree-sitter = "0.26"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "speed"
harness = false

[[bench]]
name = "token_ratio"
harness = false

[[bin]]
name = "benchmark"
path = "tools/benchmark.rs"
required-features = ["benchmark"]

[features]
benchmark = []
